their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------

- Fixed problem writing collections where MITAB was sometimes trying to 
  read past EOF in write mode (bug 1657).


Version 1.6.0 (2007-02-15)
--------------------------

- Improved generation of the .map's internal spatial index and object
  data blocks to produce an optimal r-tree, resulting in performance 
  improvements of up to 30 times faster on some spatial searches, 
  matching the perfomance of files generated by MapInfo. (bug 1585)
  (Thanks to Aircom International (Andrew Blake) for funding this.)

- Fixed problem with null brush bg color becoming black when parsing
  style strings (bug 1603)

- Added mitab_is_field_indexed() and mitab_is_field_unique() to C API
  (bug 1621)


Version 1.5.1 (2006-07-25)
--------------------------

- Fixed initialization of MBR of TABCollection members (bug 1520)

- Added mapping for datum name "North_American_Datum_1927". 

- Fixed problem with uninitialized affine parameters written to .MAP header, 
  resulting in files not readable in MapInfo, introduced by bug 1155 in 
  MITAB 1.5.0 (bug 1254, 1319)

- Fixed problem writing PLINE MULTIPLE to TAB format introduced in
  MITAB 1.5.0 (bug 1466).

- tab2tab: Set dataset bounds only after setting spatialref to prevent
  default coordsys bounds from taking precedence when bounds are 
  available in source dataset (bug 1511)

- Coordsys false easting and northing are in the units of the coordsys, not
  necessarily meters.  Adjusted mitab_coordsys.cpp to reflect this. 
  http://bugzilla.remotesensing.org/show_bug.cgi?id=1113

- Similar problem in mitab_spatialref.cpp for TAB files also fixed. 
  http://bugzilla.remotesensing.org/show_bug.cgi?id=1113



Version 1.5.0 (2006-02-16)
--------------------------
